CRIA layout da home

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,15 +16,16 @@
         android:contentDescription="@string/dc_vetor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/vector_login" />
+        app:srcCompat="@drawable/img_top_bar" />
 
     <ImageView
         android:id="@+id/imgLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_width="188dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/dc_logo"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgTop"
         app:srcCompat="@drawable/logo" />
@@ -37,14 +38,15 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/border_edit_text"
+        android:defaultFocusHighlightEnabled="false"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="@string/text_email"
+        android:importantForAutofill="noExcludeDescendants"
         android:inputType="textEmailAddress"
         android:paddingStart="20dp"
         android:paddingEnd="0dp"
         android:textColor="#131F0F"
-        android:importantForAutofill="noExcludeDescendants"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +77,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="64dp"
         android:background="@drawable/border_btn"
+        android:backgroundTint="#5C9249"
         android:text="@string/btn_login"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
