--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linkSignUp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EBF3E8"
@@ -60,11 +61,11 @@
         android:background="@drawable/border_edit_text"
         android:ems="10"
         android:hint="@string/text_password"
+        android:importantForAutofill="noExcludeDescendants"
         android:inputType="textPassword"
         android:paddingStart="20dp"
         android:paddingEnd="0dp"
         android:textColor="#131F0F"
-        android:importantForAutofill="noExcludeDescendants"
         app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
         app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />
@@ -84,26 +85,42 @@
         app:layout_constraintStart_toStartOf="@+id/editTextPassword"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
-    <TextView
-        android:id="@+id/signUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/signup"
-        android:textColor="#131F0F"
-        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
+<!--    <TextView-->
+<!--        android:id="@+id/signUp"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:text="@string/signup"-->
+<!--        android:textColor="#131F0F"-->
+<!--        android:textSize="20sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/buttonLogin"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />-->
 
-    <TextView
-        android:id="@+id/linkSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+    <!--    <TextView-->
+    <!--        android:id="@+id/linkSignUp"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="8dp"-->
+    <!--        android:layout_marginTop="16dp"-->
+    <!--        android:text="@string/link_signup"-->
+    <!--        android:textColor="#5C9249"-->
+    <!--        android:textStyle="bold"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/signUp"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />-->
+
+    <Button
+        android:id="@+id/btnLinkSignUp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/border_btn"
         android:text="@string/link_signup"
-        android:textColor="#5C9249"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/signUp"
+        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
 
