--- a/app/src/main/res/drawable/border_edit_text.xml
+++ b/app/src/main/res/drawable/border_edit_text.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="30dp" />
-            <stroke android:height="20dp" android:color="#131F0F" />
-            <gradient android:angle="-90"  android:startColor="#FFFFFF" android:endColor="#FFFFFF" />
+            <corners android:radius="50dp"  />
+            <stroke android:width="1dp" android:color="#131F0F" />
+            <gradient android:angle="-90"  android:startColor="#EBF3E8" android:endColor="#EBF3E8" />
         </shape>
     </item>
 
