--- a/app/src/main/res/drawable/rounded_background.xml
+++ b/app/src/main/res/drawable/rounded_background.xml
@@ -2,8 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="50dp" />
-            <stroke android:height="20dp" android:color="#5C9249" />
+            <corners android:radius="30dp" />
+            <stroke android:height="20dp" android:color="#F7FAF5" />
+            <solid android:color="#BEF7FAF5" />
         </shape>
     </item>
 
