--- a/app/src/main/res/layout/activity_leagues.xml
+++ b/app/src/main/res/layout/activity_leagues.xml
@@ -4,6 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EBF3E8"
     tools:context=".LeaguesActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="413dp"
+        android:layout_height="85dp"
+        android:background="#EBF3E8"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/ic_profile"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:contentDescription="@string/dc_user"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.92"
+            app:layout_constraintStart_toEndOf="@+id/logoLearn"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_profile" />
+
+        <ImageView
+            android:id="@+id/logoLearn"
+            android:layout_width="85dp"
+            android:layout_height="76dp"
+            android:contentDescription="@string/dc_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.06"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_logo" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="343dp"
+        android:layout_height="535dp"
+        android:background="@drawable/rounded_background"
+        android:orientation="vertical"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintCircleRadius="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5">
+
+        <TextView
+            android:id="@+id/txt_leagues"
+            android:layout_width="214dp"
+            android:layout_height="32dp"
+            android:fontFamily="@font/heebo_medium"
+            android:text="@string/cd_leagues"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.060000002" />
+
+        <EditText
+            android:id="@+id/editTextEmailAddress"
+            android:layout_width="284dp"
+            android:layout_height="50dp"
+            android:background="@drawable/border_edit_text"
+            android:defaultFocusHighlightEnabled="false"
+            android:drawablePadding="10dp"
+            android:ems="10"
+            android:hint="Nome da liga"
+            android:importantForAutofill="noExcludeDescendants"
+            android:inputType="textEmailAddress"
+            android:paddingStart="20dp"
+            android:paddingEnd="0dp"
+            android:textColor="#131F0F"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_leagues"
+            app:layout_constraintVertical_bias="0.094" />
+
+        <EditText
+            android:id="@+id/editTextEmpresa"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@drawable/border_edit_text"
+            android:ems="10"
+            android:hint="Nome da Empresa"
+            android:importantForAutofill="noExcludeDescendants"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:paddingEnd="0dp"
+            android:textColor="#131F0F"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
+            app:layout_constraintVertical_bias="0.119" />
+
+        <EditText
+            android:id="@+id/editTextParticipantes"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@drawable/border_edit_text"
+            android:ems="10"
+            android:hint="Nome dos Participantes"
+            android:importantForAutofill="noExcludeDescendants"
+            android:inputType="textPassword"
+            android:paddingStart="20dp"
+            android:paddingEnd="0dp"
+            android:textColor="#131F0F"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
+            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress"
+            app:layout_constraintVertical_bias="0.374" />
+
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@drawable/border_btn"
+            android:backgroundTint="#5C9249"
+            android:fontFamily="sans-serif"
+            android:text="@string/btn_login"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/editTextParticipantes"
+            app:layout_constraintStart_toStartOf="@+id/editTextParticipantes"
+            app:layout_constraintTop_toBottomOf="@+id/editTextParticipantes" />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
