--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="0.5">
 
         <ImageView
-            android:id="@+id/imgLogo"
+            android:id="@+id/txt_leagues"
             android:layout_width="130dp"
             android:layout_height="70dp"
             android:contentDescription="@string/dc_logo"
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.50"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
+            app:layout_constraintTop_toBottomOf="@+id/txt_leagues"
             app:layout_constraintVertical_bias="0.04000002" />
 
         <EditText
