--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EBF3E8"
-    tools:context=".Home">
+    tools:context=".HomeActivity">
 
     <ImageView
         android:id="@+id/logoHome"
